cabal-version: >= 1.16
name:          bert
version:       1.2.1
build-type:    Simple
license:       BSD3
license-file:  LICENSE
author:        marius a. eriksen, Roman Cheplyaka
category:      Data
synopsis:      BERT implementation
description:   Implements the BERT serialization and RPC protocols
               described at <http://bert-rpc.org/>.
maintainer:    Roman Cheplyaka <roma@ro-che.info>
copyright:     (c) 2009-2011 marius a. eriksen; (c) 2013 Roman Cheplyaka
homepage:      https://github.com/feuerbach/bert
bug-reports:   https://github.com/feuerbach/bert/issues

source-repository head
  type: git
  location: git@github.com:feuerbach/bert.git

library
  hs-source-dirs:   src
  build-depends: base == 4.*, containers >= 0.2, 
                 bytestring >= 0.9, binary >= 0.5, mtl >= 1.1,
                 network >= 2.2, unix >= 2.0, time >= 1.1, 
                 parsec >= 2.0,
                 conduit >= 1.0,
                 network-conduit >= 1.0,
                 binary-conduit >= 1.2,
                 void

  exposed-modules:
    Data.BERT
    Data.BERT.Packet
    Data.BERT.Parser
    Data.BERT.Term
    Data.BERT.Types
    Network.BERT
    Network.BERT.Transport
    Network.BERT.Client
    Network.BERT.Server
  ghc-options: -fwarn-unused-imports
  default-language: Haskell2010

test-suite test
  hs-source-dirs: tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  Main-is: test.hs
  build-depends:
    tasty >= 0.4,
    tasty-smallcheck,
    tasty-hunit,
    async,
    network,
    bert,
    base,
    smallcheck,
    containers,
    bytestring,
    binary
